resume upload updated and resume delete
finished resume upload

delete resume implemented

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Application Tracker"/>
+    <script src="https://kit.fontawesome.com/d39104b20e.js" crossorigin="anonymous"></script>
     <title>Application Tracker</title>
   </head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
