--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Application Tracker"/>
-    <meta property="og:image" content=”%PUBLIC_URL%/img/thumbnail.jpg” />
+    <!-- Primary Meta Tags -->
+    <title>Application Tracker</title>
+    <meta name="title" content="Application Tracker">
+    <meta name="description" content="Application Tracker">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://applicate.netlify.app/">
+    <meta property="og:title" content="Application Tracker">
+    <meta property="og:description" content="Application Tracker">
+    <meta property="og:image" content="”/img/thumbnail.jpg”">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://applicate.netlify.app/">
+    <meta property="twitter:title" content="Application Tracker">
+    <meta property="twitter:description" content="Application Tracker">
+    <meta property="twitter:image" content="”/img/thumbnail.jpg”">
     <script src="https://kit.fontawesome.com/d39104b20e.js" crossorigin="anonymous"></script>
     <title>Application Tracker</title>
   </head>
