--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://applicate.netlify.app/">
     <meta property="og:title" content="Application Tracker">
     <meta property="og:description" content="Application Tracker">
-    <meta property="og:image" content="./img/thumbnail.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/img/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://applicate.netlify.app/">
     <meta property="twitter:title" content="Application Tracker">
     <meta property="twitter:description" content="Application Tracker">
-    <meta property="twitter:image" content="./img/thumbnail.jpg">
+    <meta property="twitter:image" content="%PUBLIC_URL%/img/thumbnail.jpg">
     <script src="https://kit.fontawesome.com/d39104b20e.js" crossorigin="anonymous"></script>
     <title>Application Tracker</title>
   </head>
