--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,18 @@
     <meta name="description" content="Application Tracker">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://applicate.netlify.app/">
-    <meta property="og:title" content="Application Tracker">
-    <meta property="og:description" content="Application Tracker">
-    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.jpg">
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
+    <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://applicate.netlify.app/">
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Application Tracker">
+    <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Application Tracker">
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="%PUBLIC_URL%/thumbnail.jpg">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://applicate.netlify.app/">
-    <meta property="twitter:title" content="Application Tracker">
-    <meta property="twitter:description" content="Application Tracker">
-    <meta property="twitter:image" content="%PUBLIC_URL%/thumbnail.jpg">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:card" content="summary_large_image">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:url" content="https://applicate.netlify.app/">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:title" content="Application Tracker">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:description" content="Application Tracker">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:image" content="%PUBLIC_URL%/thumbnail.jpg">
     <script src="https://kit.fontawesome.com/d39104b20e.js" crossorigin="anonymous"></script>
     <title>Application Tracker</title>
   </head>
