--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Application Tracker">
     <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Application Tracker">
     <meta prefix="og: http://ogp.me/ns#" property="og:image" content="%PUBLIC_URL%/thumbnail.jpg">
+    <meta prefix="og: http://ogp.me/ns#" property="og:image:secure_url" content="%PUBLIC_URL%/thumbnail.jpg" />
 
     <!-- Twitter -->
     <meta prefix="og: http://ogp.me/ns#" property="twitter:card" content="summary_large_image">
@@ -24,6 +25,8 @@
     <meta prefix="og: http://ogp.me/ns#" property="twitter:title" content="Application Tracker">
     <meta prefix="og: http://ogp.me/ns#" property="twitter:description" content="Application Tracker">
     <meta prefix="og: http://ogp.me/ns#" property="twitter:image" content="%PUBLIC_URL%/thumbnail.jpg">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:image:secure_url" content="%PUBLIC_URL%/thumbnail.jpg" />
+    
     <script src="https://kit.fontawesome.com/d39104b20e.js" crossorigin="anonymous"></script>
     <title>Application Tracker</title>
   </head>
