--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
     <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://applicate.netlify.app/">
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Application Tracker">
     <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Application Tracker">
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="%PUBLIC_URL%/thumbnail.jpg">
-    <meta prefix="og: http://ogp.me/ns#" property="og:image:secure_url" content="%PUBLIC_URL%/thumbnail.jpg" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://applicate.netlify.app/thumbnail.jpg">
+    <meta prefix="og: http://ogp.me/ns#" property="og:image:secure_url" content="https://applicate.netlify.app/thumbnail.jpg" />
 
     <!-- Twitter -->
     <meta prefix="og: http://ogp.me/ns#" property="twitter:card" content="summary_large_image">
     <meta prefix="og: http://ogp.me/ns#" property="twitter:url" content="https://applicate.netlify.app/">
     <meta prefix="og: http://ogp.me/ns#" property="twitter:title" content="Application Tracker">
     <meta prefix="og: http://ogp.me/ns#" property="twitter:description" content="Application Tracker">
-    <meta prefix="og: http://ogp.me/ns#" property="twitter:image" content="%PUBLIC_URL%/thumbnail.jpg">
-    <meta prefix="og: http://ogp.me/ns#" property="twitter:image:secure_url" content="%PUBLIC_URL%/thumbnail.jpg" />
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:image" content="https://applicate.netlify.app/thumbnail.jpg">
+    <meta prefix="og: http://ogp.me/ns#" property="twitter:image:secure_url" content="https://applicate.netlify.app/thumbnail.jpg" />
     
     <script src="https://kit.fontawesome.com/d39104b20e.js" crossorigin="anonymous"></script>
     <title>Application Tracker</title>
